--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -20,6 +20,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "react/react-in-jsx-scope": "off",
         "indent": [
             "error",
             "tab"
